5.6.0 2023xxxx
BF: Review: Optimization and corrections
    And the binary becomes a bit smaller again :-)
BF: Worker: Correction of the unwanted SocketException on stop and restart
    The behavior is correct, only the error output is wrong.
BF: HTML: Cleanup of the obsolete type attribute in the style tag
CR: Manual: Switch to Markdown
CR: XAPI: Change method String Module.explain() to String Module.expose()
CR: SAPI: Change method String Server.explain() to String Server.expose()

5.5.0 20221007
BF: Review: Optimization and corrections (without functional impact)
    The binary is getting a little smaller again. I did not expect that :-)
BF: Generator: Correction when parsing structures
    Structures deeper 65535 levels no longer cause an exception.
BF: SAPI: Correction of passed context to constructor
    Until now the context always ended with section :INI -- that was wrong.
BF: HTTP(S): Added status 301 in the list of status codes
BF: HTTP(S): BLOCKSIZE, INTERRUPT, ISOLATION, TIMEOUT is changeable by virtual host
BF: Build: Empty storage directory is included in the zip file
CR: Build: Releases are now only available on the release page
CR: Build: Simplification when inserting release infos
CR: License: Changed to Apache License Version 2.0
CR: Service: Added configuration file as optional program argument for startup
    usage: devwex [start] [ini file]
CR: SAPI: Constructors for servers support alternative signature(s)
    Server(String context, Object initialize)
    Server(String context, Initialize initialize)
CR: Windows: Update of service-32.exe / service-64.exe (prunsrv.exe 1.3.1.0)
CR: HTTP(S): Consolidation of TIMEOUT, DURATION, ISOLATION
    TIMEOUT timeout for sockets (SO_TIMEOUT), request, streams, option [S] is omitted
    ISOLATION maximum time of (X)CGI processes
    If exceeded, the request is isolated and closed with an HTTP error status.
    This also protects against blocked or extremely slow data streams.
    DURATION is omitted
