@@ -32,7 +32,7 @@
     <footer>
       <section>
         <p>Seanox Devwex</p>
-        <p>Advanced Server Development</p>
+        <p>Minimalistic Server Engine</p>
         <p>Seanox Software Solutions</p>
        </section>
     </footer>
